--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@zxing/browser": "0.0.5",
+    "@zxing/library": "^0.18.3",
+    "@zxing/ngx-scanner": "^3.1.2",
+    "ng-qrcode": "^4.1.0",
     "ngx-countdown": "^10.0.1",
+    "qrcode": "^1.4.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
