--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "@zxing/browser": "0.0.5",
     "@zxing/library": "^0.18.3",
     "@zxing/ngx-scanner": "^3.1.2",
-    "ng-qrcode": "^4.1.0",
     "ngx-countdown": "^10.0.1",
-    "qrcode": "^1.4.4",
+    "ngx-kjua": "^1.12.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
