--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.0",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "~10.0.0",
-    "@angular/compiler": "~10.0.0",
-    "@angular/core": "~10.0.0",
-    "@angular/forms": "~10.0.0",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "~10.0.0",
-    "@angular/platform-browser-dynamic": "~10.0.0",
-    "@angular/router": "~10.0.0",
+    "@angular/animations": "~9.1.13",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "~9.1.13",
+    "@angular/compiler": "~9.1.13",
+    "@angular/core": "~9.1.13",
+    "@angular/forms": "~9.1.13",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "~9.1.13",
+    "@angular/platform-browser-dynamic": "~9.1.13",
+    "@angular/router": "~9.1.13",
     "@auth0/angular-jwt": "^5.0.2",
     "@zxing/browser": "0.0.5",
     "@zxing/library": "^0.18.3",
-    "@zxing/ngx-scanner": "^3.1.2",
-    "ngx-countdown": "^10.0.1",
+    "@zxing/ngx-scanner": "3.0.0",
+    "ngx-countdown": "~9.0.1",
     "ngx-kjua": "^1.12.1",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
+    "@angular-devkit/build-angular": "^0.901.13",
+    "@angular/cli": "~9.1.13",
+    "@angular/compiler-cli": "~9.1.13",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -50,6 +50,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.8.3"
   }
 }
